src/rs4lk/grammar/junos/JunosParser.py
# Generated from Junos.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JunosParser ( Parser ):

    grammarFileName = "Junos.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'set'", "'deactivate'", "'routing-options autonomous-system'", 
                     "'interfaces'", "'address'", "'vlan-id'", "'unit '", 
                     "'family'", "'inet'", "'inet6'", "'protocols bgp group'", 
                     "'local-address'", "'neighbor'", "'peer-as'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WORD", "COMMUNITY", "COMPLEX_WORD", "COMPLEX_WORD2", 
                      "COMPLEX_WORD3", "STRING", "NUMBER", "IPV4_ADDRESS", 
                      "IPV6_ADDRESS", "IPV6_SHORTHAND", "IPV4_NETWORK", 
                      "IPV6_NETWORK", "BOOLEAN", "HEX_QUAD", "HEX_DIGIT", 
                      "COMMENT", "WS", "CONTINUED_LINE", "NEWLINE", "ID" ]

    RULE_config = 0
    RULE_line = 1
    RULE_entity = 2
    RULE_localAsEntity = 3
    RULE_interfaceEntity = 4
    RULE_interfaceIp = 5
    RULE_otherInterfaceConfig = 6
    RULE_vlanId = 7
    RULE_interfaceName = 8
    RULE_unit = 9
    RULE_family = 10
    RULE_bgpEntity = 11
    RULE_localAddress = 12
    RULE_neighbor = 13
    RULE_remoteAs = 14
    RULE_asNum = 15
    RULE_otherBgpConf = 16
    RULE_groupName = 17
    RULE_otherEntity = 18
    RULE_ipNetwork = 19
    RULE_value = 20
    RULE_list = 21

    ruleNames =  [ "config", "line", "entity", "localAsEntity", "interfaceEntity", 
                   "interfaceIp", "otherInterfaceConfig", "vlanId", "interfaceName", 
                   "unit", "family", "bgpEntity", "localAddress", "neighbor", 
                   "remoteAs", "asNum", "otherBgpConf", "groupName", "otherEntity", 
                   "ipNetwork", "value", "list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    WORD=16
    COMMUNITY=17
    COMPLEX_WORD=18
    COMPLEX_WORD2=19
    COMPLEX_WORD3=20
    STRING=21
    NUMBER=22
    IPV4_ADDRESS=23
    IPV6_ADDRESS=24
    IPV6_SHORTHAND=25
    IPV4_NETWORK=26
    IPV6_NETWORK=27
    BOOLEAN=28
    HEX_QUAD=29
    HEX_DIGIT=30
    COMMENT=31
    WS=32
    CONTINUED_LINE=33
    NEWLINE=34
    ID=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JunosParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JunosParser.LineContext)
            else:
                return self.getTypedRuleContext(JunosParser.LineContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(JunosParser.NEWLINE)
            else:
                return self.getToken(JunosParser.NEWLINE, i)

        def getRuleIndex(self):
            return JunosParser.RULE_config

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig" ):
                listener.enterConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig" ):
                listener.exitConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig" ):
                return visitor.visitConfig(self)
            else:
                return visitor.visitChildren(self)




    def config(self):

        localctx = JunosParser.ConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_config)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17179869190) != 0):
                self.state = 46
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 2]:
                    self.state = 44
                    self.line()
                    pass
                elif token in [34]:
                    self.state = 45
                    self.match(JunosParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(JunosParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entity(self):
            return self.getTypedRuleContext(JunosParser.EntityContext,0)


        def getRuleIndex(self):
            return JunosParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = JunosParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 54
            self.entity()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interfaceEntity(self):
            return self.getTypedRuleContext(JunosParser.InterfaceEntityContext,0)


        def localAsEntity(self):
            return self.getTypedRuleContext(JunosParser.LocalAsEntityContext,0)


        def bgpEntity(self):
            return self.getTypedRuleContext(JunosParser.BgpEntityContext,0)


        def otherEntity(self):
            return self.getTypedRuleContext(JunosParser.OtherEntityContext,0)


        def getRuleIndex(self):
            return JunosParser.RULE_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity" ):
                listener.enterEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity" ):
                listener.exitEntity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntity" ):
                return visitor.visitEntity(self)
            else:
                return visitor.visitChildren(self)




    def entity(self):

        localctx = JunosParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_entity)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.interfaceEntity()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.localAsEntity()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.bgpEntity()
                pass
            elif token in [8, 16, 17, 18, 19, 20, 21, 22, 23, 24, 26, 27, 28]:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.otherEntity()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalAsEntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(JunosParser.WORD, 0)

        def getRuleIndex(self):
            return JunosParser.RULE_localAsEntity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalAsEntity" ):
                listener.enterLocalAsEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocalAsEntity" ):
                listener.exitLocalAsEntity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalAsEntity" ):
                return visitor.visitLocalAsEntity(self)
            else:
                return visitor.visitChildren(self)




    def localAsEntity(self):

        localctx = JunosParser.LocalAsEntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_localAsEntity)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(JunosParser.T__2)
            self.state = 63
            self.match(JunosParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceEntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def interfaceName(self):
            return self.getTypedRuleContext(JunosParser.InterfaceNameContext,0)


        def NEWLINE(self):
            return self.getToken(JunosParser.NEWLINE, 0)

        def interfaceIp(self):
            return self.getTypedRuleContext(JunosParser.InterfaceIpContext,0)


        def vlanId(self):
            return self.getTypedRuleContext(JunosParser.VlanIdContext,0)


        def otherInterfaceConfig(self):
            return self.getTypedRuleContext(JunosParser.OtherInterfaceConfigContext,0)


        def getRuleIndex(self):
            return JunosParser.RULE_interfaceEntity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceEntity" ):
                listener.enterInterfaceEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceEntity" ):
                listener.exitInterfaceEntity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceEntity" ):
                return visitor.visitInterfaceEntity(self)
            else:
                return visitor.visitChildren(self)




    def interfaceEntity(self):

        localctx = JunosParser.InterfaceEntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_interfaceEntity)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(JunosParser.T__3)
            self.state = 66
            self.interfaceName()
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 67
                self.interfaceIp()
                pass

            elif la_ == 2:
                self.state = 68
                self.vlanId()
                pass

            elif la_ == 3:
                self.state = 69
                self.otherInterfaceConfig()
                pass


            self.state = 72
            self.match(JunosParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceIpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unit(self):
            return self.getTypedRuleContext(JunosParser.UnitContext,0)


        def family(self):
            return self.getTypedRuleContext(JunosParser.FamilyContext,0)


        def ipNetwork(self):
            return self.getTypedRuleContext(JunosParser.IpNetworkContext,0)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JunosParser.ValueContext)
            else:
                return self.getTypedRuleContext(JunosParser.ValueContext,i)


        def getRuleIndex(self):
            return JunosParser.RULE_interfaceIp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceIp" ):
                listener.enterInterfaceIp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceIp" ):
                listener.exitInterfaceIp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceIp" ):
                return visitor.visitInterfaceIp(self)
            else:
                return visitor.visitChildren(self)




    def interfaceIp(self):

        localctx = JunosParser.InterfaceIpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_interfaceIp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.unit()
            self.state = 75
            self.family()
            self.state = 76
            self.match(JunosParser.T__4)
            self.state = 77
            self.ipNetwork()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 503250944) != 0):
                self.state = 78
                self.value()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OtherInterfaceConfigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unit(self):
            return self.getTypedRuleContext(JunosParser.UnitContext,0)


        def family(self):
            return self.getTypedRuleContext(JunosParser.FamilyContext,0)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JunosParser.ValueContext)
            else:
                return self.getTypedRuleContext(JunosParser.ValueContext,i)


        def getRuleIndex(self):
            return JunosParser.RULE_otherInterfaceConfig

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOtherInterfaceConfig" ):
                listener.enterOtherInterfaceConfig(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOtherInterfaceConfig" ):
                listener.exitOtherInterfaceConfig(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOtherInterfaceConfig" ):
                return visitor.visitOtherInterfaceConfig(self)
            else:
                return visitor.visitChildren(self)




    def otherInterfaceConfig(self):

        localctx = JunosParser.OtherInterfaceConfigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_otherInterfaceConfig)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 84
                self.unit()
                self.state = 85
                self.family()


            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 503250944) != 0):
                self.state = 89
                self.value()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VlanIdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unit(self):
            return self.getTypedRuleContext(JunosParser.UnitContext,0)


        def WORD(self):
            return self.getToken(JunosParser.WORD, 0)

        def getRuleIndex(self):
            return JunosParser.RULE_vlanId

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVlanId" ):
                listener.enterVlanId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVlanId" ):
                listener.exitVlanId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVlanId" ):
                return visitor.visitVlanId(self)
            else:
                return visitor.visitChildren(self)




    def vlanId(self):

        localctx = JunosParser.VlanIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vlanId)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.unit()
            self.state = 96
            self.match(JunosParser.T__5)
            self.state = 97
            self.match(JunosParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterfaceNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(JunosParser.WORD, 0)

        def getRuleIndex(self):
            return JunosParser.RULE_interfaceName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterfaceName" ):
                listener.enterInterfaceName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterfaceName" ):
                listener.exitInterfaceName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterfaceName" ):
                return visitor.visitInterfaceName(self)
            else:
                return visitor.visitChildren(self)




    def interfaceName(self):

        localctx = JunosParser.InterfaceNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_interfaceName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(JunosParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(JunosParser.WORD, 0)

        def getRuleIndex(self):
            return JunosParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit" ):
                return visitor.visitUnit(self)
            else:
                return visitor.visitChildren(self)




    def unit(self):

        localctx = JunosParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_unit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(JunosParser.T__6)
            self.state = 102
            self.match(JunosParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FamilyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JunosParser.RULE_family

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFamily" ):
                listener.enterFamily(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFamily" ):
                listener.exitFamily(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFamily" ):
                return visitor.visitFamily(self)
            else:
                return visitor.visitChildren(self)




    def family(self):

        localctx = JunosParser.FamilyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_family)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(JunosParser.T__7)
            self.state = 105
            _la = self._input.LA(1)
            if not(_la==9 or _la==10):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BgpEntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def groupName(self):
            return self.getTypedRuleContext(JunosParser.GroupNameContext,0)


        def localAddress(self):
            return self.getTypedRuleContext(JunosParser.LocalAddressContext,0)


        def neighbor(self):
            return self.getTypedRuleContext(JunosParser.NeighborContext,0)


        def otherBgpConf(self):
            return self.getTypedRuleContext(JunosParser.OtherBgpConfContext,0)


        def remoteAs(self):
            return self.getTypedRuleContext(JunosParser.RemoteAsContext,0)


        def family(self):
            return self.getTypedRuleContext(JunosParser.FamilyContext,0)


        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(JunosParser.WORD)
            else:
                return self.getToken(JunosParser.WORD, i)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(JunosParser.STRING)
            else:
                return self.getToken(JunosParser.STRING, i)

        def getRuleIndex(self):
            return JunosParser.RULE_bgpEntity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBgpEntity" ):
                listener.enterBgpEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBgpEntity" ):
                listener.exitBgpEntity(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBgpEntity" ):
                return visitor.visitBgpEntity(self)
            else:
                return visitor.visitChildren(self)




    def bgpEntity(self):

        localctx = JunosParser.BgpEntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bgpEntity)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(JunosParser.T__10)
            self.state = 108
            self.groupName()
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 109
                self.localAddress()

            elif la_ == 2:
                self.state = 110
                self.neighbor()

            elif la_ == 3:
                self.state = 111
                self.otherBgpConf()

            elif la_ == 4:
                self.state = 112
                self.remoteAs()


            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [-1, 1, 2, 8, 34]:
                self.state = 122
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 115
                    self.family()

                    self.state = 117 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 116
                        self.match(JunosParser.WORD)
                        self.state = 119 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==16):
                            break


                elif la_ == 2:
                    self.state = 121
                    self.family()


                pass
            elif token in [16, 21]:
                self.state = 125 
                self._errHandler.sync(self)
                _alt = 1+1
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1+1:
                        self.state = 124
                        _la = self._input.LA(1)
                        if not(_la==16 or _la==21):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()

                    else:
                        raise NoViableAltException(self)
                    self.state = 127 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalAddressContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ipNetwork(self):
            return self.getTypedRuleContext(JunosParser.IpNetworkContext,0)


        def getRuleIndex(self):
            return JunosParser.RULE_localAddress

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalAddress" ):
                listener.enterLocalAddress(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocalAddress" ):
                listener.exitLocalAddress(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalAddress" ):
                return visitor.visitLocalAddress(self)
            else:
                return visitor.visitChildren(self)




    def localAddress(self):

        localctx = JunosParser.LocalAddressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_localAddress)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(JunosParser.T__11)
            self.state = 132
            self.ipNetwork()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NeighborContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ipNetwork(self):
            return self.getTypedRuleContext(JunosParser.IpNetworkContext,0)


        def getRuleIndex(self):
            return JunosParser.RULE_neighbor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNeighbor" ):
                listener.enterNeighbor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNeighbor" ):
                listener.exitNeighbor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNeighbor" ):
                return visitor.visitNeighbor(self)
            else:
                return visitor.visitChildren(self)




    def neighbor(self):

        localctx = JunosParser.NeighborContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_neighbor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(JunosParser.T__12)
            self.state = 135
            self.ipNetwork()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RemoteAsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asNum(self):
            return self.getTypedRuleContext(JunosParser.AsNumContext,0)


        def getRuleIndex(self):
            return JunosParser.RULE_remoteAs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRemoteAs" ):
                listener.enterRemoteAs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRemoteAs" ):
                listener.exitRemoteAs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRemoteAs" ):
                return visitor.visitRemoteAs(self)
            else:
                return visitor.visitChildren(self)




    def remoteAs(self):

        localctx = JunosParser.RemoteAsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_remoteAs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(JunosParser.T__13)
            self.state = 138
            self.asNum()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsNumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(JunosParser.WORD, 0)

        def getRuleIndex(self):
            return JunosParser.RULE_asNum

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsNum" ):
                listener.enterAsNum(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsNum" ):
                listener.exitAsNum(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsNum" ):
                return visitor.visitAsNum(self)
            else:
                return visitor.visitChildren(self)




    def asNum(self):

        localctx = JunosParser.AsNumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_asNum)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(JunosParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OtherBgpConfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(JunosParser.WORD)
            else:
                return self.getToken(JunosParser.WORD, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(JunosParser.WS)
            else:
                return self.getToken(JunosParser.WS, i)

        def getRuleIndex(self):
            return JunosParser.RULE_otherBgpConf
